Updated response schema to allow emotion based responses (works same as channel based response built-in feature)

--- a/rasa/shared/nlu/training_data/schemas/responses.yml
+++ b/rasa/shared/nlu/training_data/schemas/responses.yml
@@ -51,5 +51,7 @@ schema;responses:
               allowempty: True
           channel:
             type: "str"
+          emotion:
+            type: "str"
           metadata:
             type: "any"
